Improve build file